Update WeatherController.java